--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
 #                                #
 ##################################
 
-logo: /images/logo_website.png
+logo: /images/logo.png
 
 links:
   - title: About
