--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,17 +7,17 @@ links:
     url: /programme/
     sub-links:
     - title: Recognition Ceremony
-      url: /programme/recognition-ceremony/
+      url: /recognition-ceremony/
     - title: Keynote Sessions
-      url: /programme/keynote-sessions/
+      url: /keynote-sessions/
     - title: Panel Discussion
-      url: /programme/panel-discussion/
+      url: /panel-discussion/
     - title: Round-table Discussion
-      url: /programme/roundtable-discussion/
+      url: /roundtable-discussion/
     - title: Sharing Sessions
-      url: /programme/sharing-sessions/
+      url: /sharing-sessions/
     - title: Exploration Session
-      url: /programme/exploration-session/
+      url: /exploration-session/
   - title: FAQ
     url: /faq/
   - title: Contact
