--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,9 @@ links:
   - title: About
     url: /about/
   - title: Programme
-    collection: programme
+    sublinks:
+      - title: Keynote Sessions
+        url: /programme/keynote-sessions
   - title: FAQ
     url: /faq/
   - title: Contact
