--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ links:
         url: /programme/panel-discussion/
       - title: Sharing Sessions
         url: /programme/sharing-sessions/
-      - title: Roundtable Discussion
-        url: /programme/roundtable-discussion/
+      - title: Round-Table Discussion
+        url: /programme/round-table-discussion/
       - title: Exploration Session
         url: /programme/exploration-session/
       - title: Recognition Ceremony
