--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,3 +1,10 @@
+contact_us: /contact/
+show_reach: false
+feedback: https://form.gov.sg/#!/5a9ce876b3a3b6006e6b8335
+faq: /faq/
+privacy_policy: /privacy-policy/
+terms_of_use: /terms-of-use/
+copyright_agency: Ministry of Education, Singapore
 social_media:
     twitter: https://twitter.com/etd_makers
     facebook: https://www.facebook.com/etd.makers/
