--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
-contact_us: /contact/
+contact_us: /contact-us/
 show_reach: false
-feedback: https://form.gov.sg/#!/5a9ce876b3a3b6006e6b8335
+feedback: https://form.gov.sg/#!/5dd5376f0e393c0012c89722
 faq: /faq/
 privacy_policy: /privacy-policy/
 terms_of_use: /terms-of-use/
