--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,6 +1,10 @@
-#Contact Us
-
-column:
+---
+layout: contact_us
+title: Contact
+permalink: /contact/
+agency_name: MakerConnect 2020 Organising Committee
+contacts:
   - title: General Enquiries & Feedback
     content:
-    - line: CHUA_Song_Guan@moe.gov.sg (email)
+    - email: CHUA_Song_Guan@moe.gov.sg
+---
