--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-contact_us: /contact/
+contact_us: /contact-us/
 show_reach: false
 feedback: https://form.gov.sg/#!/5dd5376f0e393c0012c89722
 faq: /faq/
