Update and rename contact-us.yml

--- a/_data/contact-us.yml
+++ b/_data/contact-us.yml
@@ -1,6 +1,6 @@
 ---
 layout: contact_us
-title: Contact
+title: Contact Us
 permalink: /contact-us/
 agency_name: MakerConnect 2020 Organising Committee
 contacts:
