--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Title
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+title: MakerConnect 2020
+url: https://www.edtech.moe.edu.sg
 favicon: /images/favicon-isomer.ico
 
 collections:
