--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 contact_us: /contact-us/
 show_reach: false
 feedback: https://form.gov.sg/#!/5dd5376f0e393c0012c89722
-privacy_policy: /privacy-policy/
+privacy_policy: /privacy/
 terms_of_use: /terms-of-use/
 copyright_agency: Ministry of Education, Singapore
 social_media:
