--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: MakerConnect 2020
 url: https://www.edtech.moe.edu.sg
-favicon: /images/favicon.ico
+favicon: /images/favicon.png
 
 collections:
   programme:
