--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@ links:
         url: /programme/panel-discussion/
       - title: Sharing Sessions
         url: /programme/sharing-sessions/
-      - title: Round-Table Discussion
-        url: /programme/round-table-discussion/
+      - title: Fireside Chat
+        url: /programme/fireside-chat/
       - title: Exploration Session
         url: /programme/exploration-session/
       - title: Recognition Ceremony
