--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ favicon: /images/favicon.png
 collections:
   programme:
     output: true
+  _keynote-sessions:
+    output: true
 
 ##################################################################################################################
 # Everything below this line is Isomer-specific configuration. There should not be a need to edit these settings #
