--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,9 +1,10 @@
 contact_us: /contact-us/
 show_reach: false
-feedback: https://form.gov.sg/#!/5dd5376f0e393c0012c89722
+feedback: 
 privacy_policy: /privacy/
 terms_of_use: /terms-of-use/
 copyright_agency: Ministry of Education, Singapore
+faq: /faq/
 social_media:
     twitter: https://twitter.com/etd_makers
     facebook: https://www.facebook.com/etd.makers/
