--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: MakerConnect 2020
+title: ETD
 url: https://www.edtech.moe.edu.sg
-favicon: /images/favicon.png
+favicon: /images/ETD logo.png
 
 collections:
   programme:
