--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ links:
   - title: About Us
     url: /about-us/
   - title: Teacher Resources
-    collection: Teacher Resources
+    collection: teacher-resources
   - title: Student Resources
-    collection: Student Resources
+    collection: student-resources
   - title: FAQ
     url: /faq/
